# JobFit

./: .gitignore  README.md  main.ipynb  pyproject.toml
backend/: main.py
data/: cooccurrence.npz  demand_scores.csv  lstm_results.csv  skill_list.csv  skills_Business_Analyst.csv  skills_Cloud_Engineer.csv  skills_Data_Analyst.csv  skills_Data_Engineer.csv  skills_Data_Scientist.csv  skills_Machine_Learning_Engineer.csv  skills_Senior_Data_Analyst.csv  skills_Senior_Data_Engineer.csv  skills_Senior_Data_Scientist.csv  skills_Software_Engineer.csv  skills_global.csv  weekly_forecasts.csv
data/daily_demand/: Business_Analyst_daily.csv  Business_Analyst_last_seq.npy  Cloud_Engineer_daily.csv  Cloud_Engineer_last_seq.npy  Data_Analyst_daily.csv  Data_Analyst_last_seq.npy  Data_Engineer_daily.csv  Data_Engineer_last_seq.npy  Data_Scientist_daily.csv  Data_Scientist_last_seq.npy  Machine_Learning_Engineer_daily.csv  Machine_Learning_Engineer_last_seq.npy  Software_Engineer_daily.csv  Software_Engineer_last_seq.npy
frontend/: index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Index.tsx  IndustryInsights.tsx  (+3 more)
models/: lstm_Business_Analyst.keras  lstm_Cloud_Engineer.keras  lstm_Data_Analyst.keras  lstm_Data_Engineer.keras  lstm_Data_Scientist.keras  lstm_Machine_Learning_Engineer.keras  lstm_Software_Engineer.keras  lstm_results.csv  scaler_Business_Analyst.pkl  scaler_Cloud_Engineer.pkl  scaler_Data_Analyst.pkl  scaler_Data_Engineer.pkl  scaler_Data_Scientist.pkl  scaler_Machine_Learning_Engineer.pkl  scaler_Software_Engineer.pkl
(+8 files in other folders)
